# cobana

./: .coverage  .gitignore  README.md  TESTING.md  analysis.json  config.yaml.example  instructions.md  pyproject.toml  pytest.ini  python-examples-analysis.json  python-examples-summary.md  report.html  requests-analysis.json  requests-summary.md  summary.md
cobana/: __init__.py  analyzer.py  cli.py
cobana/analyzers/: __init__.py  class_metrics.py  code_size.py  code_smells.py  complexity.py  db_coupling.py  maintainability.py  module_coupling.py  module_health.py  tech_debt.py  test_analysis.py
cobana/report/: html_generator.py  html_template.py  json_generator.py  md_generator.py
cobana/utils/: ast_utils.py  config_utils.py  file_utils.py  module_detector.py
tests/: conftest.py  test_cli.py  test_integration.py
tests/test_analyzers/: test_complexity.py
tests/test_report/: test_html_generator.py  test_json_generator.py  test_md_generator.py
tests/test_utils/: test_file_utils.py  test_module_detector.py
