[project]
name = "cobana"
version = "1.0.0"
description = "Codebase Architecture Analysis Tool - Automated Python codebase analysis for architectural health, code quality, and technical debt"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "COBANA Team" }
]
keywords = [
    "code-analysis",
    "static-analysis",
    "code-quality",
    "technical-debt",
    "architecture",
    "metrics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "radon>=5.1.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.scripts]
cobana = "cobana.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cobana"]
